# arv_gpt

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/backend/api/: urls.py  views.py
backend/backend/backend/: settings.py
frontend/: chat.txt  color.css  main.txt  pyproject.toml  requirements.txt
frontend/src/: auth.py  chat_screen.py  main.py
